--- a/odp-app/src/app/modules/admin/persons/list/list.component.scss
+++ b/odp-app/src/app/modules/admin/persons/list/list.component.scss
@@ -49,3 +49,12 @@ mat-paginator {
     margin-top: 12px;
 }
 
+.table-container {
+    max-width: 100%;
+    width: 100%;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    padding: 24px;
+}
+
