--- a/odp-app/src/app/modules/admin/persons/list/list.component.html
+++ b/odp-app/src/app/modules/admin/persons/list/list.component.html
@@ -1,15 +1,11 @@
 <div class="absolute inset-0 flex overflow-hidden">
-    <mat-drawer-container class="bg-card h-full flex-auto dark:bg-transparent">
+    <mat-drawer-container>
         <!-- Drawer -->
-        <mat-drawer #matDrawer class="w-full dark:bg-gray-900 md:w-160"
-            [mode]="drawerMode"
-            [opened]="false"
-            [position]="'end'"
-            [disableClose]="true">
+        <mat-drawer #matDrawer [opened]="false" mode="over" position="end">
             <router-outlet></router-outlet>
         </mat-drawer>
 
-        <mat-drawer-content class="flex w-full flex-col gap-y-4 overflow-auto p-6">
+        <mat-drawer-content>
             <div class="flex flex-wrap gap-4 text-3xl">
                 <div class="flex flex-initial items-center gap-x-2">
                     <div class="font-mono text-4xl font-semibold text-primary opacity-80">
@@ -41,69 +37,73 @@
                 <button mat-button (click)="onReset()" *ngIf="isShowReset">ล้าง</button>
             </div>
 
-            <ng-container *ngIf="(persons$ | async) as personResp">
-                <div class="sm:overflow-visible overflow-x-auto w-full">
-                    <table mat-table [dataSource]="personResp.items || []" class="mat-elevation-z8 w-full">
-                        <ng-container matColumnDef="n_id">
-                            <th mat-header-cell *matHeaderCellDef> เลขบัตรประชาชน </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.n_id }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> ชื่อจริง </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.name }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="surname">
-                            <th mat-header-cell *matHeaderCellDef> นามสกุล </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.surname }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="dob">
-                            <th mat-header-cell *matHeaderCellDef> วันเกิด </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.dob | date:'dd/MM/yyyy' }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="phone">
-                            <th mat-header-cell *matHeaderCellDef> เบอร์โทร </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.phone }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="nationality">
-                            <th mat-header-cell *matHeaderCellDef> สัญชาติ </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.nationality }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="citizen">
-                            <th mat-header-cell *matHeaderCellDef> เชื้อชาติ </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.citizen }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="religion">
-                            <th mat-header-cell *matHeaderCellDef> ศาสนา </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.religion }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="address">
-                            <th mat-header-cell *matHeaderCellDef> ที่อยู่ </th>
-                            <td mat-cell *matCellDef="let person"> {{ person.address }} </td>
-                        </ng-container>
-                        <ng-container matColumnDef="actions">
-                            <th mat-header-cell *matHeaderCellDef> จัดการ </th>
-                            <td mat-cell *matCellDef="let person">
-                                <div class="table-actions">
-                                    <button mat-icon-button color="primary" (click)="onEdit(person)">
-                                        <mat-icon>edit</mat-icon>
-                                    </button>
-                                    <button mat-icon-button color="warn" (click)="onDelete(person)">
-                                        <mat-icon>delete</mat-icon>
-                                    </button>
-                                </div>
-                            </td>
-                        </ng-container>
+            <div class="flex justify-center w-full">
+                <div class="w-full max-w-6xl bg-white rounded-lg shadow p-4">
+                    <ng-container *ngIf="(persons$ | async) as personResp">
+                        <div class="sm:overflow-visible overflow-x-auto w-full">
+                            <table mat-table [dataSource]="personResp.items || []" class="mat-elevation-z8 w-full">
+                                <ng-container matColumnDef="n_id">
+                                    <th mat-header-cell *matHeaderCellDef> เลขบัตรประชาชน </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.n_id }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="name">
+                                    <th mat-header-cell *matHeaderCellDef> ชื่อจริง </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.name }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="surname">
+                                    <th mat-header-cell *matHeaderCellDef> นามสกุล </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.surname }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="dob">
+                                    <th mat-header-cell *matHeaderCellDef> วันเกิด </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.dob | date:'dd/MM/yyyy' }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="phone">
+                                    <th mat-header-cell *matHeaderCellDef> เบอร์โทร </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.phone }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="nationality">
+                                    <th mat-header-cell *matHeaderCellDef> สัญชาติ </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.nationality }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="citizen">
+                                    <th mat-header-cell *matHeaderCellDef> เชื้อชาติ </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.citizen }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="religion">
+                                    <th mat-header-cell *matHeaderCellDef> ศาสนา </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.religion }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="address">
+                                    <th mat-header-cell *matHeaderCellDef> ที่อยู่ </th>
+                                    <td mat-cell *matCellDef="let person"> {{ person.address }} </td>
+                                </ng-container>
+                                <ng-container matColumnDef="actions">
+                                    <th mat-header-cell *matHeaderCellDef> จัดการ </th>
+                                    <td mat-cell *matCellDef="let person">
+                                        <div class="table-actions">
+                                            <button mat-icon-button color="primary" (click)="onEdit(person)">
+                                                <mat-icon>edit</mat-icon>
+                                            </button>
+                                            <button mat-icon-button color="warn" (click)="onDelete(person)">
+                                                <mat-icon>delete</mat-icon>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </ng-container>
 
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
-                    <mat-paginator [length]="personResp.total || 0"
-                                   [pageSize]="10"
-                                   [pageSizeOptions]="[10, 20, 50]"
-                                   (page)="onChangePage($event)">
-                    </mat-paginator>
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                            </table>
+                            <mat-paginator [length]="personResp.total || 0"
+                                           [pageSize]="10"
+                                           [pageSizeOptions]="[10, 20, 50]"
+                                           (page)="onChangePage($event)">
+                            </mat-paginator>
+                        </div>
+                    </ng-container>
                 </div>
-            </ng-container>
+            </div>
         </mat-drawer-content>
     </mat-drawer-container>
 </div>
