--- a/odp-app/src/app/modules/admin/persons/table/table.component.html
+++ b/odp-app/src/app/modules/admin/persons/table/table.component.html
@@ -10,30 +10,26 @@
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef  class="w-[2rem]"></th>
-    <td mat-cell *matCellDef="let element" > 
-      <div class="flex justify-center">
-          <button mat-icon-button [matMenuTriggerFor]="menu" [name]="'action'+element.id">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-      
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="text-center"></th>
+    <td mat-cell *matCellDef="let element">
+      <div class="flex justify-center table-actions">
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
         <mat-menu #menu="matMenu">
-          
-          <button mat-menu-item (click)="edit.emit(element)" [name]="'edit_code_'+element.id">
-            <mat-icon [svgIcon]="'edit'"></mat-icon>
-            <span>เเก้ไข</span>
+          <button mat-menu-item (click)="edit.emit(element)">
+            <mat-icon color="primary">edit</mat-icon>
+            <span>แก้ไข</span>
           </button>
-          <button mat-menu-item (click)="delete.emit(element)" [name]="'delete_code_'+element.id">
-            <mat-icon [svgIcon]="'delete'"></mat-icon>
+          <button mat-menu-item (click)="delete.emit(element)">
+            <mat-icon color="warn">delete</mat-icon>
             <span>ลบ</span>
           </button>
-          
         </mat-menu>
       </div>
     </td>
   </ng-container>
-
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="cursor-pointer custom">
