--- a/odp-app/src/app/modules/admin/persons/list/list.component.html
+++ b/odp-app/src/app/modules/admin/persons/list/list.component.html
@@ -25,72 +25,71 @@
         </button>
       </div>
 
-      <div class="flex justify-center w-full">
-        <div class="table-container">
-          <ng-container *ngIf="(persons$ | async) as personResp">
-            <div class="sm:overflow-visible overflow-x-auto w-full">
-              <table mat-table [dataSource]="personResp.items || []" class="mat-elevation-z8 w-full">
-                <ng-container matColumnDef="n_id">
-                  <th mat-header-cell *matHeaderCellDef> เลขบัตรประชาชน </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.n_id }} </td>
-                </ng-container>
-                <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef> ชื่อจริง </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.name }} </td>
-                </ng-container>
-                <ng-container matColumnDef="surname">
-                  <th mat-header-cell *matHeaderCellDef> นามสกุล </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.surname }} </td>
-                </ng-container>
-                <ng-container matColumnDef="dob">
-                  <th mat-header-cell *matHeaderCellDef> วันเกิด </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.dob | date:'dd/MM/yyyy' }} </td>
-                </ng-container>
-                <ng-container matColumnDef="phone">
-                  <th mat-header-cell *matHeaderCellDef> เบอร์โทร </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.phone }} </td>
-                </ng-container>
-                <ng-container matColumnDef="nationality">
-                  <th mat-header-cell *matHeaderCellDef> สัญชาติ </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.nationality }} </td>
-                </ng-container>
-                <ng-container matColumnDef="citizen">
-                  <th mat-header-cell *matHeaderCellDef> เชื้อชาติ </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.citizen }} </td>
-                </ng-container>
-                <ng-container matColumnDef="religion">
-                  <th mat-header-cell *matHeaderCellDef> ศาสนา </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.religion }} </td>
-                </ng-container>
-                <ng-container matColumnDef="address">
-                  <th mat-header-cell *matHeaderCellDef> ที่อยู่ </th>
-                  <td mat-cell *matCellDef="let person"> {{ person.address }} </td>
-                </ng-container>
-                <ng-container matColumnDef="actions">
-                  <th mat-header-cell *matHeaderCellDef> จัดการ </th>
-                  <td mat-cell *matCellDef="let person">
-                    <div class="table-actions">
-                      <button mat-icon-button color="primary" (click)="onEdit(person)">
-                        <mat-icon>edit</mat-icon>
-                      </button>
-                      <button mat-icon-button color="warn" (click)="onDelete(person)">
-                        <mat-icon>delete</mat-icon>
-                      </button>
-                    </div>
-                  </td>
-                </ng-container>
+      <!-- table-container ไม่ต้อง wrap ด้วย flex/justify-center -->
+      <div class="table-container">
+        <ng-container *ngIf="(persons$ | async) as personResp">
+          <div class="sm:overflow-visible overflow-x-auto w-full">
+            <table mat-table [dataSource]="personResp.items || []" class="mat-elevation-z8 w-full">
+              <ng-container matColumnDef="n_id">
+                <th mat-header-cell *matHeaderCellDef> เลขบัตรประชาชน </th>
+                <td mat-cell *matCellDef="let person"> {{ person.n_id }} </td>
+              </ng-container>
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> ชื่อจริง </th>
+                <td mat-cell *matCellDef="let person"> {{ person.name }} </td>
+              </ng-container>
+              <ng-container matColumnDef="surname">
+                <th mat-header-cell *matHeaderCellDef> นามสกุล </th>
+                <td mat-cell *matCellDef="let person"> {{ person.surname }} </td>
+              </ng-container>
+              <ng-container matColumnDef="dob">
+                <th mat-header-cell *matHeaderCellDef> วันเกิด </th>
+                <td mat-cell *matCellDef="let person"> {{ person.dob | date:'dd/MM/yyyy' }} </td>
+              </ng-container>
+              <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef> เบอร์โทร </th>
+                <td mat-cell *matCellDef="let person"> {{ person.phone }} </td>
+              </ng-container>
+              <ng-container matColumnDef="nationality">
+                <th mat-header-cell *matHeaderCellDef> สัญชาติ </th>
+                <td mat-cell *matCellDef="let person"> {{ person.nationality }} </td>
+              </ng-container>
+              <ng-container matColumnDef="citizen">
+                <th mat-header-cell *matHeaderCellDef> เชื้อชาติ </th>
+                <td mat-cell *matCellDef="let person"> {{ person.citizen }} </td>
+              </ng-container>
+              <ng-container matColumnDef="religion">
+                <th mat-header-cell *matHeaderCellDef> ศาสนา </th>
+                <td mat-cell *matCellDef="let person"> {{ person.religion }} </td>
+              </ng-container>
+              <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef> ที่อยู่ </th>
+                <td mat-cell *matCellDef="let person"> {{ person.address }} </td>
+              </ng-container>
+              <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef> จัดการ </th>
+                <td mat-cell *matCellDef="let person">
+                  <div class="table-actions">
+                    <button mat-icon-button color="primary" (click)="onEdit(person)">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="onDelete(person)">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </div>
+                </td>
+              </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              <mat-paginator [length]="personResp.total || 0"
-                             [pageSize]="10"
-                             [pageSizeOptions]="[10, 20, 50]"
-                             (page)="onChangePage($event)">
-              </mat-paginator>
-            </div>
-          </ng-container>
-        </div>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [length]="personResp.total || 0"
+                           [pageSize]="10"
+                           [pageSizeOptions]="[10, 20, 50]"
+                           (page)="onChangePage($event)">
+            </mat-paginator>
+          </div>
+        </ng-container>
       </div>
     </mat-drawer-content>
   </mat-drawer-container>
