Add member to web

--- a/odp-app/src/app/modules/admin/members/list/list.component.html
+++ b/odp-app/src/app/modules/admin/members/list/list.component.html
@@ -1,8 +1,7 @@
 <div class="absolute inset-0 flex overflow-hidden">
     <mat-drawer-container class="bg-card h-full flex-auto dark:bg-transparent">
         <!-- Drawer -->
-        <mat-drawer class="w-full dark:bg-gray-900 md:w-160" [mode]="drawerMode" [opened]="false" [position]="'end'"
-            [disableClose]="true" #matDrawer>
+        <mat-drawer #matDrawer mode="over" position="end" class="md:w-160 dark:bg-gray-900">
             <router-outlet></router-outlet>
         </mat-drawer>
 
@@ -15,8 +14,6 @@
                 </div>
 
                 <div class="flex flex-auto items-center justify-end gap-x-2">
-                
-
                     <div class="w-auto">
                         <button mat-flat-button class="ml-4 w-auto bg-[#22c55e] rounded-lg text-white"
                             (click)="onOpenCreate()" name="create_user">
@@ -27,20 +24,17 @@
             </div>
             <mat-divider></mat-divider>
 
-            @if((members$ | async); as memberResp){
-            <div class="sm:overflow-visible overflow-x-auto w-full">
-                <app-table-member 
-                    [memberResp]="memberResp" 
-                    (edit)="onEdit($event)" 
-                    (delete)="onDelete($event)"
-                    (updateStatus)="onUpdateStatus($event)"
-                    (changePage)="onChangePage($event)"
-                >
-                </app-table-member>
-            </div>
-
-            }
-
+            <ng-container *ngIf="members$ | async as memberResp">
+                <div class="sm:overflow-visible overflow-x-auto w-full">
+                    <app-table-member 
+                        [memberResp]="memberResp" 
+                        (edit)="onEdit($event)" 
+                        (delete)="onDelete($event)"
+                        (updateStatus)="onUpdateStatus($event)"
+                        (changePage)="onChangePage($event)">
+                    </app-table-member>
+                </div>
+            </ng-container>
         </mat-drawer-content>
     </mat-drawer-container>
 </div>
