--- a/odp-app/src/app/modules/admin/persons/edit/edit.component.html
+++ b/odp-app/src/app/modules/admin/persons/edit/edit.component.html
@@ -3,7 +3,7 @@
         <!-- Header -->
         <div class="flex items-center justify-between -mt-3 -ml-4">
             <div class="pr-4 pl-3">
-                <h1 class="text-2xl font-semibold">{{ isEdit ? 'แก้ไขข้อมูลนักเรียน' : 'เพิ่มข้อมูลนักเรียน' }}</h1>
+                <h1 class="text-2xl font-semibold">{{ isEdit ? 'แก้ไขข้อมูลลูกค้า' : 'เพิ่มข้อมูลลูกค้า' }}</h1>
             </div>
             <div class="flex items-center">
                 <button mat-icon-button (click)="onClose()" name="close">
