--- a/odp-app/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/odp-app/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -44,11 +44,11 @@
                     <mat-label>อีเมล</mat-label>
                     <input id="email" matInput [formControlName]="'email'" />
                     @if (forgotPasswordForm.get('email').hasError('required')) {
-                        <mat-error> โปรดระบุ อีเมล </mat-error>
+                        <mat-error> โปรดกรอก อีเมล </mat-error>
                     }
                     @if (forgotPasswordForm.get('email').hasError('email')) {
                         <mat-error>
-                            โปรดระบุ อีเมลที่ถูกต้อง
+                            โปรดกรอก อีเมลที่ถูกต้อง
                         </mat-error>
                     }
                 </mat-form-field>
@@ -62,7 +62,7 @@
                     (click)="sendResetLink()"
                 >
                     @if (!forgotPasswordForm.disabled) {
-                        <span> ส่งลิงก์รีเซ็ตรหัสผ่าน </span>
+                        <span> ส่งลิงค์รีเซ็ตรหัสผ่าน </span>
                     }
                     @if (forgotPasswordForm.disabled) {
                         <mat-progress-spinner
@@ -112,14 +112,13 @@
         <div class="relative z-10 w-full max-w-2xl">
             <div class="text-7xl font-bold leading-none text-gray-100">
                 <div>ยินดีต้อนรับสู่</div>
-                <div>ระบบบริหารจัดการ</div>
-                <div>ผู้ถือหุ้นของบริษัทคุณ</div>
+                <div>One Data Platform</div>
+                <div>ระบบจัดการข้อมูลนักเรียนและบุคลากร</div>
             </div>
             <div class="mt-6 text-lg leading-6 tracking-tight text-gray-400">
-                แพลตฟอร์มของเราช่วยให้คุณสามารถจัดการข้อมูลผู้ถือหุ้น ตรวจสอบสถานะหุ้น รายงานผลประกอบการ และเข้าถึงข้อมูลที่สำคัญของบริษัทได้อย่างสะดวกและปลอดภัย
-                เริ่มต้นบริหารจัดการบริษัทของคุณผ่านระบบของเราได้แล้ววันนี้
+                แพลตฟอร์มนี้ช่วยให้โรงเรียนสามารถบริหารจัดการข้อมูลสมาชิกและข้อมูลบุคคล ได้อย่างเป็นระบบ ช่วยสนับสนุนการทำงานของครูและเจ้าหน้าที่ด้วยข้อมูลที่แม่นยำ ปลอดภัย และเข้าถึงได้ง่าย
             </div>
-            
+
         </div>
     </div>
 </div>
