--- a/odp-app/src/app/modules/admin/members/edit/edit.component.html
+++ b/odp-app/src/app/modules/admin/members/edit/edit.component.html
@@ -22,7 +22,7 @@
                         <div>
                             <mat-form-field class="w-full" subscriptSizing="dynamic">
                                 <mat-label>Member ID</mat-label>
-                                <input matInput placeholder="ระบุ Member ID" formControlName="memberId">
+                                <input matInput placeholder="ระบุ Member ID" formControlName="memberid">
                             </mat-form-field>
                         </div>
                         <!-- ฟิลด์ ID Card -->
