--- a/odp-app/src/app/modules/admin/members/table/table.component.html
+++ b/odp-app/src/app/modules/admin/members/table/table.component.html
@@ -1,13 +1,25 @@
 @if(memberResp){
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="id">
+  <!-- <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ไอดี </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container> -->
+
+  <!-- <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> ชื่อ </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container> -->
+
+  <ng-container matColumnDef="memberid">
+    <th mat-header-cell *matHeaderCellDef> Member ID </th>
+    <td mat-cell *matCellDef="let element"> {{element.memberid}} </td>
   </ng-container>
 
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> ชื่อ </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    <th mat-header-cell *matHeaderCellDef> ชื่อสมาชิก </th>
+    <td mat-cell *matCellDef="let element">
+      {{ getPersonNameByIdCard(element.idCard) }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="edit">
