--- a/odp-app/src/app/modules/admin/members/table/table.component.html
+++ b/odp-app/src/app/modules/admin/members/table/table.component.html
@@ -1,61 +1,51 @@
 @if(memberResp){
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!-- <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ไอดี </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-  </ng-container> -->
-
-  <!-- <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> ชื่อ </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container> -->
 
   <ng-container matColumnDef="memberid">
     <th mat-header-cell *matHeaderCellDef> Member ID </th>
     <td mat-cell *matCellDef="let element"> {{element.memberid}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="idCard">
     <th mat-header-cell *matHeaderCellDef> ชื่อสมาชิก </th>
     <td mat-cell *matCellDef="let element">
       {{ getPersonNameByIdCard(element.idCard) }}
     </td>
   </ng-container>
+  
+  <ng-container matColumnDef="organization">
+    <th mat-header-cell *matHeaderCellDef> สังกัดองค์กร </th>
+    <td mat-cell *matCellDef="let element"> {{element.organization}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="contactPerson">
+    <th mat-header-cell *matHeaderCellDef> บุคคลที่สามารถติดต่อได้ </th>
+    <td mat-cell *matCellDef="let element"> {{element.contactPerson}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="contactPhone">
+    <th mat-header-cell *matHeaderCellDef> เบอร์โทรศัพท์บุคคลที่สามารถติดต่อได้ </th>
+    <td mat-cell *matCellDef="let element"> {{element.contactPhone}} </td>
+  </ng-container>
 
   <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef  class="w-[2rem]"></th>
-    <td mat-cell *matCellDef="let element" > 
-      <div class="flex justify-center">
-          <button mat-icon-button [matMenuTriggerFor]="menu" [name]="'action'+element.id">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-      
-        <mat-menu #menu="matMenu">
-          
-          <button mat-menu-item (click)="edit.emit(element)" [name]="'edit_code_'+element.id">
-            <mat-icon [svgIcon]="'edit'"></mat-icon>
-            <span>เเก้ไข</span>
-          </button>
-          <button mat-menu-item (click)="delete.emit(element)" [name]="'delete_code_'+element.id">
-            <mat-icon [svgIcon]="'delete'"></mat-icon>
-            <span>ลบ</span>
-          </button>
-          
-        </mat-menu>
-      </div>
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <!-- ปุ่มหรือเมนูแก้ไข -->
     </td>
   </ng-container>
 
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="cursor-pointer custom">
-  </tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
 <div class="flex justify-end bg-white">
-  <mat-paginator class="text-md" [length]="memberResp.totalItems" [pageSize]="memberResp.itemsPerPage"
-    [pageIndex]="memberResp.currentPage - 1" [pageSizeOptions]="[10, 25, 100]" (page)="onChangePage($event)"
-    aria-label="Select page">
+  <mat-paginator class="text-md"
+    [length]="memberResp.totalItems"
+    [pageSize]="memberResp.itemsPerPage"
+    [pageIndex]="memberResp.currentPage - 1"
+    [pageSizeOptions]="[10, 25, 100]"
+    (page)="onChangePage($event)">
   </mat-paginator>
 </div>
 }
