--- a/odp-app/src/app/modules/admin/members/list/list.component.html
+++ b/odp-app/src/app/modules/admin/members/list/list.component.html
@@ -1,8 +1,12 @@
 <div class="absolute inset-0 flex overflow-hidden">
     <mat-drawer-container class="bg-card h-full flex-auto dark:bg-transparent">
         <!-- Drawer -->
-        <mat-drawer class="w-full dark:bg-gray-900 md:w-160" [mode]="drawerMode" [opened]="false" [position]="'end'"
-            [disableClose]="true" #matDrawer>
+        <mat-drawer class="w-full dark:bg-gray-900 md:w-160"
+            [mode]="drawerMode"
+            [opened]="drawerOpened"
+            [position]="'end'"
+            [disableClose]="true"
+            #matDrawer>
             <app-edit-member></app-edit-member>
         </mat-drawer>
 
@@ -29,13 +33,17 @@
 
             <ng-container *ngIf="members$ | async as memberResp">
                 <div class="sm:overflow-visible overflow-x-auto w-full">
-                    <app-table-member 
-                        [memberResp]="memberResp" 
-                        (edit)="onEdit($event)" 
-                        (delete)="onDelete($event)"
-                        (updateStatus)="onUpdateStatus($event)"
-                        (changePage)="onChangePage($event)">
+                    <app-table-member
+                      [memberResp]="memberResp"
+                      (edit)="onEditMember($event)"
+                      (delete)="onDeleteMember($event)">
                     </app-table-member>
+
+                    <edit-member-component
+                      *ngIf="isEditDrawerOpen"
+                      [member]="selectedMember"
+                      (close)="isEditDrawerOpen = false">
+                    </edit-member-component>
                 </div>
             </ng-container>
         </mat-drawer-content>
