--- a/odp-app/src/app/modules/admin/members/table/table.component.html
+++ b/odp-app/src/app/modules/admin/members/table/table.component.html
@@ -28,12 +28,70 @@
     <td mat-cell *matCellDef="let element"> {{element.contactPhone}} </td>
   </ng-container>
 
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef></th>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="text-center"></th>
     <td mat-cell *matCellDef="let element">
-      <!-- ปุ่มหรือเมนูแก้ไข -->
+      <div class="flex justify-center table-actions">
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="onEdit(element)">
+            <mat-icon color="primary">edit</mat-icon>
+            <span>แก้ไข</span>
+          </button>
+          <button mat-menu-item (click)="onDelete(element)">
+            <mat-icon color="warn">delete</mat-icon>
+            <span>ลบ</span>
+          </button>
+        </mat-menu>
+      </div>
     </td>
   </ng-container>
+
+  <!-- <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef class="text-center"></th>
+    <td mat-cell *matCellDef="let element">
+      <div class="flex justify-center table-actions">
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+          <button mat-menu-item (click)="edit.emit(element)">
+            <mat-icon color="primary">edit</mat-icon>
+            <span>แก้ไข</span>
+          </button>
+          <button mat-menu-item (click)="delete.emit(element)">
+            <mat-icon color="warn">delete</mat-icon>
+            <span>ลบ</span>
+          </button>
+        </mat-menu>
+      </div>
+    </td>
+  </ng-container> -->
+
+  <!-- <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef> จัดการ </th>
+              <td mat-cell *matCellDef="let member">
+                <div class="table-actions">
+                  <button mat-icon-button color="primary" (click)="onEdit(member)">
+                    <mat-icon>edit</mat-icon>
+                  </button>
+                  <button mat-icon-button color="warn" (click)="onDelete(member)">
+                    <mat-icon>delete</mat-icon>
+                  </button>
+                </div>
+              </td>
+            </ng-container> -->
+
+  <!-- <ng-container matColumnDef="edit">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button (click)="edit.emit(element)">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </td>
+  </ng-container> -->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
